<resources>
  <string name="app_name">HackerNews</string>
  <string name="show_stories">Show Stories</string>
  <string name="top_stories">Top Stories</string>
  <string name="jobs">Jobs</string>
  <string name="ask_stories">Ask Stories</string>
  <string name="sample_date">23:05 11/11/2021</string>
  <string name="zero">0</string>
  <string name="author">Anonymous</string>
  <string name="story_title">Show story title</string>
  <string name="unable_to_load_data">Unable to load data</string>
  <string name="retry">Retry</string>
  <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
  <string name="save_as_favourite">Save as Favourite</string>
  <string name="story">STORY</string>
  <string name="comments">Comments</string>
  <string name="here_goes_the_description_of_the_question">Here goes the description of the question</string>
  <string name="posted_by">posted by</string>
  <string name="view_comments">VIEW COMMENTS</string>
  <string name="_23m">23m</string>
  <string name="huge_comment">\t\t\t\t\t\t\t\t\t\t\tThis is a huge comment that must be pushed down to the next line</string>
  <string name="author_image_view">author image view</string>
</resources>
