<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="8dp">

  <ImageView
    android:id="@+id/authorImageView"
    android:layout_width="32sp"
    android:layout_height="32sp"
    android:contentDescription="@string/author_image_view"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/user" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/authorNameTextView"
    style="@style/TextAppearance.AppCompat.Small"
    android:layout_width="0sp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8sp"
    android:text="@string/author"
    android:textColor="@color/secondaryTextColor"
    android:textStyle="bold"
    app:layout_constraintStart_toEndOf="@+id/authorImageView"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/commentTextView"
    style="@style/TextAppearance.AppCompat.Small"
    android:layout_width="0sp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8sp"
    android:clickable="false"
    android:text="@string/huge_comment"
    android:textColor="@color/secondaryTextColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/authorImageView"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/timeTextView"
    style="@style/TextAppearance.AppCompat.Small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8sp"
    android:layout_marginTop="4sp"
    android:text="@string/_23m"
    android:textSize="10sp"
    app:layout_constraintStart_toEndOf="@+id/authorImageView"
    app:layout_constraintTop_toBottomOf="@+id/commentTextView"
    tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>
