<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.stories.ask.detail.AskStoryDetailFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/titleTextView"
      style="@style/TextAppearance.AppCompat.Headline"
      android:layout_width="0sp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_between_story_constraints"
      android:layout_marginTop="8sp"
      android:layout_marginEnd="8sp"
      android:text="@string/story_title"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/authorPrefixTextView"
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4sp"
      android:text="@string/posted_by"
      android:textSize="@dimen/small_text_size"
      app:layout_constraintStart_toStartOf="@+id/titleTextView"
      app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/authorNameTextView"
      style="@style/TextAppearance.MaterialComponents.Body2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4sp"
      android:text="@string/author"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/authorPrefixTextView"
      app:layout_constraintStart_toEndOf="@+id/authorPrefixTextView" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/timeTextView"
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="2sp"
      android:text="@string/sample_date"
      app:layout_constraintStart_toStartOf="@+id/titleTextView"
      app:layout_constraintTop_toBottomOf="@+id/authorPrefixTextView" />

    <include
      android:id="@+id/dot1"
      layout="@layout/view_dot"
      android:layout_width="@dimen/dot_view_size"
      android:layout_height="@dimen/dot_view_size"
      android:layout_marginStart="@dimen/margin_between_story_constraints"
      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
      app:layout_constraintStart_toEndOf="@+id/timeTextView"
      app:layout_constraintTop_toTopOf="@+id/timeTextView"
      tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/commentsImageView"
      android:layout_width="16sp"
      android:layout_height="16sp"
      android:layout_marginStart="@dimen/margin_between_story_constraints"
      android:src="@drawable/ic_baseline_comment_24"
      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
      app:layout_constraintStart_toEndOf="@+id/dot1"
      app:layout_constraintTop_toTopOf="@+id/timeTextView"
      app:tint="@color/iconColor" />

    <!--    <com.mikepenz.iconics.view.IconicsImageView-->
    <!--      android:id="@+id/commentsImageView"-->
    <!--      android:layout_width="16sp"-->
    <!--      android:layout_height="16sp"-->
    <!--      android:layout_marginStart="32sp"-->
    <!--      app:iiv_icon="gmd-favorite"-->
    <!--      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"-->
    <!--      app:layout_constraintStart_toEndOf="@+id/timeTextView"-->
    <!--      app:layout_constraintTop_toTopOf="@+id/timeTextView"-->
    <!--      app:tint="@color/iconColor" />-->

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/commentsTextView"
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4sp"
      android:text="@string/zero"
      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
      app:layout_constraintStart_toEndOf="@+id/commentsImageView"
      app:layout_constraintTop_toTopOf="@+id/timeTextView" />

    <!--    <com.mikepenz.iconics.view.IconicsImageView-->
    <!--      android:id="@+id/scoreImageView"-->
    <!--      android:layout_width="16sp"-->
    <!--      android:layout_height="16sp"-->
    <!--      android:layout_marginStart="16sp"-->
    <!--      app:iiv_icon="gmd-favorite"-->
    <!--      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"-->
    <!--      app:layout_constraintStart_toEndOf="@+id/commentsTextView"-->
    <!--      app:layout_constraintTop_toTopOf="@+id/timeTextView"-->
    <!--      app:tint="@color/iconColor" />-->

    <include
      android:id="@+id/dot2"
      layout="@layout/view_dot"
      android:layout_width="@dimen/dot_view_size"
      android:layout_height="@dimen/dot_view_size"
      android:layout_marginStart="@dimen/margin_between_story_constraints"
      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
      app:layout_constraintStart_toEndOf="@+id/commentsTextView"
      app:layout_constraintTop_toTopOf="@+id/timeTextView"
      tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/scoreImageView"
      android:layout_width="16sp"
      android:layout_height="16sp"
      android:layout_marginStart="@dimen/margin_between_story_constraints"
      android:src="@drawable/ic_baseline_favorite_border_24"
      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
      app:layout_constraintStart_toEndOf="@+id/dot2"
      app:layout_constraintTop_toTopOf="@+id/timeTextView"
      app:tint="@color/iconColor" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/scoreTextView"
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4sp"
      android:text="@string/zero"
      app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
      app:layout_constraintStart_toEndOf="@+id/scoreImageView"
      app:layout_constraintTop_toTopOf="@+id/timeTextView" />

    <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginHorizontal="@dimen/margin_between_story_constraints"
      android:layout_marginTop="8sp"
      android:background="?android:attr/listDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/timeTextView" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/descriptionTextView"
      style="@style/TextAppearance.MaterialComponents.Body1"
      android:layout_width="0sp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/here_goes_the_description_of_the_question"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/titleTextView"
      app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/viewCommentsButton"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_between_story_constraints"
      android:layout_marginBottom="@dimen/margin_between_story_constraints"
      android:text="@string/view_comments"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
